<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FFFFFFFF"
        tools:context="lexjam12.htlkaindorf.at.diplomarbeit.NFCHelper"
        android:weightSum="1"
        android:id="@+id/activity_main">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:spinnerMode="dialog"
            android:background="@drawable/shape_button_withoutstroke"
            style="?android:attr/textViewStyle">
        </Spinner>

        <Button
            android:id="@+id/door"
            android:onClick="door"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textSize="15sp"
            style="?android:attr/borderlessButtonStyle"/>

        <TextView
            android:id="@+id/doorName"
            android:layout_height="0dp"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_marginBottom="20dp"
            android:textColor="#FF000000"
            android:textStyle="italic"
            android:textAlignment="center"
            android:textSize="50sp"/>

        <TextView
            android:id="@+id/doorstate"
            android:layout_height="0dp"
            android:layout_width="0dp"/>

        <TextView
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:id="@+id/name"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/pass"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/connect"
                android:onClick="connect"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/button_connect"
                android:textSize="15sp"
                android:drawableTop="@drawable/icon_connect"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/list1"
                android:onClick="list"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_choose"
                android:textSize="15sp"
                android:drawableTop="@drawable/icon_list"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/edit"
                android:onClick="edit"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_edit"
                android:textSize="15sp"
                android:drawableTop="@drawable/icon_edit"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/add"
                android:onClick="add"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_add"
                android:textSize="15sp"
                android:drawableTop="@drawable/icon_add"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
